--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
 </head>
 <body>
   <div class="main-wrap">
-    <div class="top-meta">
-      <span class="brand">Your Name</span>
-      <span class="role">Product Design Lead</span>
+     <div class="top-meta">
+      <span class="brand">Roie Shalom <span class="role">Product Design Lead</span></span>
       <nav class="social">
-        <a href="https://instagram.com/yourprofile" target="_blank">Instagram</a>
-        <a href="https://github.com/yourprofile" target="_blank">GitHub</a>
-        <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
-      </nav>
-    </div>
+      <a href="https://instagram.com/roieshalom" target="_blank">Instagram</a>
+     <a href="https://github.com/roieshalom" target="_blank">GitHub</a>
+     <a href="https://linkedin.com/in/roieshalom" target="_blank">LinkedIn</a>
+  </nav>
+</div>
 
     <section class="section">
       <div class="section-title">About</div>
