--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
     <section class="section">
       <div class="section-title">About</div>
       <p>
-        I’m a designer focused on refined, accessible, and joyful digital products. My experience spans both hands-on product creation and leading creative teams, shaping systems that feel intuitive and sophisticated—always with a keen eye for detail and relevance.
+        Hello!
+        My name is Roie Shalom, I'm an experienced and creative UI designer with an eye for details and a desire for clear and coherent design.
+        Fascinated by Innovation and technology, I made acquaintance with various technologies,
+        from Laser cutting to vector based web design, from injection molding to selective UV lamination.
+        In recent years I’ve been working as an interface designer and manager with both local and global companies such as HP,
+        Stanley Black & Decker and SanDisk Corporation. For the last six years I've also been teaching design courses,
+        disseminating the spark to others and I love it. I'm always happy to learn new things and meet interesting people
+        so if you think we can create something new and amazing together send a message. 
       </p>
     </section>
 
