--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="section-title">About</div>
       <p>
         Hello!
-        My name is Roie Shalom, I'm an experienced and creative UI designer with an eye for details and a desire for clear and coherent design.
+        I'm an experienced and creative designer with an eye for details and a desire for clear and coherent design.
         Fascinated by Innovation and technology, I made acquaintance with various technologies,
         from Laser cutting to vector based web design, from injection molding to selective UV lamination.
         In recent years I’ve been working as an interface designer and manager with both local and global companies such as HP,
