--- a/index.html
+++ b/index.html
@@ -8,24 +8,33 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!-- Navigation for smooth scroll -->
+  <nav class="main-nav">
+    <a href="#about">About</a>
+    <a href="#experience">Experience</a>
+    <a href="#work">Selected Work</a>
+    <a href="#testimonials">Testimonials</a>
+    <a href="#contact">Contact</a>
+    <a href="#more-about">More</a>
+  </nav>
   <div class="main-wrap">
-     <div class="top-meta">
+    <div class="top-meta">
       <span class="brand">Roie Shalom <span class="role">Product Design Lead</span></span>
       <nav class="social">
-      <a href="https://instagram.com/roieshalom" target="_blank">Instagram</a>
-     <a href="https://github.com/roieshalom" target="_blank">GitHub</a>
-     <a href="https://linkedin.com/in/roieshalom" target="_blank">LinkedIn</a>
-  </nav>
-</div>
+        <a href="https://instagram.com/roieshalom" target="_blank">Instagram</a>
+        <a href="https://github.com/roieshalom" target="_blank">GitHub</a>
+        <a href="https://linkedin.com/in/roieshalom" target="_blank">LinkedIn</a>
+      </nav>
+    </div>
 
-    <section class="section">
+    <section id="about" class="section">
       <div class="section-title">About</div>
       <p>
         Hello!
         I'm an experienced and creative designer with an eye for details and a desire for clear and coherent design.
         Fascinated by Innovation and technology, I made acquaintance with various technologies,
         from Laser cutting to vector based web design, from injection molding to selective UV lamination.
-        In recent years I’ve been working as an interface designer and manager with both local and global companies such as HP,
+        In recent years I've been working as an interface designer and manager with both local and global companies such as HP,
         Stanley Black & Decker and SanDisk Corporation. For the last six years I've also been teaching design courses,
         disseminating the spark to others and I love it. I'm always happy to learn new things and meet interesting people
         so if you think we can create something new and amazing together send a message. 
@@ -34,7 +43,7 @@
 
     <hr class="divider">
 
-    <section class="section">
+    <section id="experience" class="section">
       <div class="section-title">Experience</div>
       <ul class="experience-list">
         <li class="experience-item">
@@ -50,25 +59,30 @@
 
     <hr class="divider">
 
-    <section class="section">
+    <section id="work" class="section">
       <div class="section-title">Selected Work</div>
       <div class="selected-work">
         <div class="work-item">
-          <img class="work-thumb" src="atlas-thumb.jpg" alt="Atlas Dashboard thumbnail">
-          <div class="work-title">Atlas Dashboard</div>
-          <a href="#" class="work-link">Live</a>
+          <img class="work-thumb" src="placeholder1.jpg" alt="Project 1 thumbnail">
+          <div class="work-title">Project One</div>
+          <a href="#" class="work-link">View Project</a>
         </div>
         <div class="work-item">
-          <img class="work-thumb" src="shopease-thumb.jpg" alt="ShopEase thumbnail">
-          <div class="work-title">ShopEase Mobile</div>
-          <a href="#" class="work-link">Live</a>
+          <img class="work-thumb" src="placeholder2.jpg" alt="Project 2 thumbnail">
+          <div class="work-title">Project Two</div>
+          <a href="#" class="work-link">View Project</a>
+        </div>
+        <div class="work-item">
+          <img class="work-thumb" src="placeholder3.jpg" alt="Project 3 thumbnail">
+          <div class="work-title">Project Three</div>
+          <a href="#" class="work-link">View Project</a>
         </div>
       </div>
     </section>
 
     <hr class="divider">
 
-    <section class="section">
+    <section id="testimonials" class="section">
       <div class="section-title">Testimonials</div>
       <div class="testimonial-list">
         <div class="testimonial">“Balances creativity with strategic product thinking—always calm and focused, even on impossible deadlines.” <b>Anna Lee, CTO, AmazingCorp</b></div>
@@ -77,7 +91,7 @@
 
     <hr class="divider">
 
-    <section class="section">
+    <section id="contact" class="section">
       <div class="section-title">Contact</div>
       <div class="contact-block">
         <b>Email:</b> your@email.com<br>
@@ -88,7 +102,7 @@
 
     <hr class="divider">
 
-    <section class="section">
+    <section id="more-about" class="section">
       <div class="section-title">More About Me</div>
       <ul class="personal-list">
         <li><b>Languages:</b> English, German, Hebrew</li>
