--- a/index.html
+++ b/index.html
@@ -2,114 +2,111 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Your Portfolio · Product Design Lead</title>
+  <title>Roie Shalom · Product Design Lead</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Font: Mark Pro (host the font or update path as needed) -->
+  <!-- Font: Mark Pro (host or update path as needed) -->
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Navigation for smooth scroll -->
-  <nav class="main-nav">
-    <a href="#about">About</a>
-    <a href="#experience">Experience</a>
-    <a href="#work">Selected Work</a>
-    <a href="#testimonials">Testimonials</a>
-    <a href="#contact">Contact</a>
-    <a href="#more-about">More</a>
-  </nav>
-  <div class="main-wrap">
-    <div class="top-meta">
-      <span class="brand">Roie Shalom <span class="role">Product Design Lead</span></span>
-      <nav class="social">
-        <a href="https://instagram.com/roieshalom" target="_blank">Instagram</a>
-        <a href="https://github.com/roieshalom" target="_blank">GitHub</a>
-        <a href="https://linkedin.com/in/roieshalom" target="_blank">LinkedIn</a>
-      </nav>
-    </div>
-
-    <section id="about" class="section">
-      <div class="section-title">About</div>
-      <p>
-        Hello!
-        I'm an experienced and creative designer with an eye for details and a desire for clear and coherent design.
-        Fascinated by Innovation and technology, I made acquaintance with various technologies,
-        from Laser cutting to vector based web design, from injection molding to selective UV lamination.
-        In recent years I've been working as an interface designer and manager with both local and global companies such as HP,
-        Stanley Black & Decker and SanDisk Corporation. For the last six years I've also been teaching design courses,
-        disseminating the spark to others and I love it. I'm always happy to learn new things and meet interesting people
-        so if you think we can create something new and amazing together send a message. 
-      </p>
-    </section>
-
-    <hr class="divider">
-
-    <section id="experience" class="section">
-      <div class="section-title">Experience</div>
-      <ul class="experience-list">
-        <li class="experience-item">
-          <span class="exp-role">Product Design Lead</span>, AmazingCorp (2022–Present)<br>
-          Leading product vision and design teams for advanced platforms and consumer-facing apps.
-        </li>
-        <li class="experience-item">
-          <span class="exp-role">Senior UX Designer</span>, CreativeWorks (2019–2022)<br>
-          Responsible for product launches, prototyping, research, and operationalizing design.
-        </li>
-      </ul>
-    </section>
-
-    <hr class="divider">
-
-    <section id="work" class="section">
-      <div class="section-title">Selected Work</div>
-      <div class="selected-work">
-        <div class="work-item">
-          <img class="work-thumb" src="placeholder1.jpg" alt="Project 1 thumbnail">
-          <div class="work-title">Project One</div>
-          <a href="#" class="work-link">View Project</a>
+  <div class="container">
+    <aside class="sidebar">
+      <div class="sidebar-inner">
+        <div class="name-title">
+          <span class="brand">Roie Shalom</span>
+          <span class="role">Product Design Lead</span>
         </div>
-        <div class="work-item">
-          <img class="work-thumb" src="placeholder2.jpg" alt="Project 2 thumbnail">
-          <div class="work-title">Project Two</div>
-          <a href="#" class="work-link">View Project</a>
+        <p class="sidebar-bio">
+          Hello! I'm an experienced and creative designer with an eye for detail and a passion for coherent, innovative digital products.<br>
+          I thrive on learning new things and collaborating to create great work. Connect with me below!
+        </p>
+        <nav class="social">
+          <a href="https://instagram.com/roieshalom" target="_blank">Instagram</a>
+          <a href="https://github.com/roieshalom" target="_blank">GitHub</a>
+          <a href="https://linkedin.com/in/roieshalom" target="_blank">LinkedIn</a>
+        </nav>
+      </div>
+    </aside>
+    <main class="main-content">
+      <section id="about" class="section">
+        <div class="section-title">About</div>
+        <p>
+          I'm an experienced and creative designer with an eye for details and a desire for clear and coherent design.
+          Fascinated by innovation and technology, I explored various fields—from laser cutting to vector-based web design, injection molding to selective UV lamination.
+          Recently, I've worked as an interface designer and manager with global companies such as HP, Stanley Black & Decker, and SanDisk Corporation. For the last six years, I've also taught design courses, sharing inspiration with others (and loving it).
+          Always learning, always curious—if you think we could create something interesting together, send me a message!
+        </p>
+      </section>
+
+      <hr class="divider">
+
+      <section id="experience" class="section">
+        <div class="section-title">Experience</div>
+        <ul class="experience-list">
+          <li class="experience-item">
+            <span class="exp-role">Product Design Lead</span>, AmazingCorp (2022–Present)<br>
+            Leading product vision and design teams for advanced platforms and consumer-facing apps.
+          </li>
+          <li class="experience-item">
+            <span class="exp-role">Senior UX Designer</span>, CreativeWorks (2019–2022)<br>
+            Responsible for product launches, prototyping, research, and operationalizing design.
+          </li>
+        </ul>
+      </section>
+
+      <hr class="divider">
+
+      <section id="work" class="section">
+        <div class="section-title">Selected Work</div>
+        <div class="selected-work">
+          <div class="work-item">
+            <img class="work-thumb" src="images/placeholder1.jpg" alt="Project 1 thumbnail">
+            <div class="work-title">Project One</div>
+            <a href="#" class="work-link">View Project</a>
+          </div>
+          <div class="work-item">
+            <img class="work-thumb" src="images/placeholder2.jpg" alt="Project 2 thumbnail">
+            <div class="work-title">Project Two</div>
+            <a href="#" class="work-link">View Project</a>
+          </div>
+          <div class="work-item">
+            <img class="work-thumb" src="images/placeholder3.jpg" alt="Project 3 thumbnail">
+            <div class="work-title">Project Three</div>
+            <a href="#" class="work-link">View Project</a>
+          </div>
         </div>
-        <div class="work-item">
-          <img class="work-thumb" src="placeholder3.jpg" alt="Project 3 thumbnail">
-          <div class="work-title">Project Three</div>
-          <a href="#" class="work-link">View Project</a>
+      </section>
+
+      <hr class="divider">
+
+      <section id="testimonials" class="section">
+        <div class="section-title">Testimonials</div>
+        <div class="testimonial-list">
+          <div class="testimonial">“Balances creativity with strategic product thinking—always calm and focused, even on impossible deadlines.” <b>Anna Lee, CTO, AmazingCorp</b></div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <hr class="divider">
+      <hr class="divider">
 
-    <section id="testimonials" class="section">
-      <div class="section-title">Testimonials</div>
-      <div class="testimonial-list">
-        <div class="testimonial">“Balances creativity with strategic product thinking—always calm and focused, even on impossible deadlines.” <b>Anna Lee, CTO, AmazingCorp</b></div>
-      </div>
-    </section>
+      <section id="contact" class="section">
+        <div class="section-title">Contact</div>
+        <div class="contact-block">
+          <b>Email:</b> your@email.com<br>
+          <b>Location:</b> Berlin, Germany<br>
+          <b>Open to:</b> Remote & onsite opportunities
+        </div>
+      </section>
 
-    <hr class="divider">
+      <hr class="divider">
 
-    <section id="contact" class="section">
-      <div class="section-title">Contact</div>
-      <div class="contact-block">
-        <b>Email:</b> your@email.com<br>
-        <b>Location:</b> Berlin, Germany<br>
-        <b>Open to:</b> Remote & onsite opportunities
-      </div>
-    </section>
-
-    <hr class="divider">
-
-    <section id="more-about" class="section">
-      <div class="section-title">More About Me</div>
-      <ul class="personal-list">
-        <li><b>Languages:</b> English, German, Hebrew</li>
-        <li><b>Hobbies:</b> Climbing, street photography, indie games, creative coding</li>
-        <li><b>Fun:</b> Built a coffee robot just for fun</li>
-      </ul>
-    </section>
+      <section id="more-about" class="section">
+        <div class="section-title">More About Me</div>
+        <ul class="personal-list">
+          <li><b>Languages:</b> English, German, Hebrew</li>
+          <li><b>Hobbies:</b> Climbing, street photography, indie games, creative coding</li>
+          <li><b>Fun:</b> Built a coffee robot just for fun</li>
+        </ul>
+      </section>
+    </main>
   </div>
 </body>
 </html>
