img placeholder link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="section-title">Selected Work</div>
         <div class="selected-work">
           <div class="work-item">
-            <img class="work-thumb" src="images/placeholder1.jpg" alt="Project 1 thumbnail">
+            <img class="work-thumb" src="images/placeholder.png" alt="Project 1 thumbnail">
             <div class="work-title">Project One</div>
             <a href="#" class="work-link">View Project</a>
           </div>
