--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
+  <div class="layout">
     <aside class="sidebar">
       <div class="sidebar-inner">
-        <div class="name-title">
-          <span class="brand">Roie Shalom</span>
-          <span class="role">Product Design Lead</span>
-        </div>
+        <span class="brand">Roie Shalom</span>
+        <span class="role">Product Design Lead</span>
         <p class="sidebar-bio">
           Hello! I'm an experienced and creative designer with an eye for detail and a passion for coherent, innovative digital products.<br>
           I thrive on learning new things and collaborating to create great work. Connect with me below!
@@ -30,14 +28,9 @@
       <section id="about" class="section">
         <div class="section-title">About</div>
         <p>
-          I'm an experienced and creative designer with an eye for details and a desire for clear and coherent design.
-          Fascinated by innovation and technology, I explored various fields—from laser cutting to vector-based web design, injection molding to selective UV lamination.
-          Recently, I've worked as an interface designer and manager with global companies such as HP, Stanley Black & Decker, and SanDisk Corporation. For the last six years, I've also taught design courses, sharing inspiration with others (and loving it).
-          Always learning, always curious—if you think we could create something interesting together, send me a message!
+          I'm an experienced and creative designer with an eye for details and a desire for clear and coherent design. Fascinated by innovation and technology, I explored various fields. Recently, I've worked as an interface designer and manager with global companies such as HP, Stanley Black & Decker, and SanDisk Corporation.
         </p>
       </section>
-
-      <hr class="divider">
 
       <section id="experience" class="section">
         <div class="section-title">Experience</div>
@@ -53,30 +46,26 @@
         </ul>
       </section>
 
-      <hr class="divider">
-
       <section id="work" class="section">
         <div class="section-title">Selected Work</div>
         <div class="selected-work">
           <div class="work-item">
-            <img class="work-thumb" src="images/placeholder.png" alt="Project 1 thumbnail">
+            <img class="work-thumb" src="images/placeholder.png" alt="Project thumbnail">
             <div class="work-title">Project One</div>
             <a href="#" class="work-link">View Project</a>
           </div>
           <div class="work-item">
-            <img class="work-thumb" src="images/placeholder2.jpg" alt="Project 2 thumbnail">
+            <img class="work-thumb" src="images/placeholder.png" alt="Project thumbnail">
             <div class="work-title">Project Two</div>
             <a href="#" class="work-link">View Project</a>
           </div>
           <div class="work-item">
-            <img class="work-thumb" src="images/placeholder3.jpg" alt="Project 3 thumbnail">
+            <img class="work-thumb" src="images/placeholder.png" alt="Project thumbnail">
             <div class="work-title">Project Three</div>
             <a href="#" class="work-link">View Project</a>
           </div>
         </div>
       </section>
-
-      <hr class="divider">
 
       <section id="testimonials" class="section">
         <div class="section-title">Testimonials</div>
@@ -84,8 +73,6 @@
           <div class="testimonial">“Balances creativity with strategic product thinking—always calm and focused, even on impossible deadlines.” <b>Anna Lee, CTO, AmazingCorp</b></div>
         </div>
       </section>
-
-      <hr class="divider">
 
       <section id="contact" class="section">
         <div class="section-title">Contact</div>
@@ -95,8 +82,6 @@
           <b>Open to:</b> Remote & onsite opportunities
         </div>
       </section>
-
-      <hr class="divider">
 
       <section id="more-about" class="section">
         <div class="section-title">More About Me</div>
