--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
   <div class="layout">
     <aside class="sidebar">
       <div class="sidebar-inner">
+        <button id="theme-toggle" aria-label="Toggle dark mode" style="margin-bottom:18px;background:none;border:none;cursor:pointer;font-size:1.2em;">
+          <span id="theme-toggle-icon" aria-hidden="true">🌙</span>
+        </button>
         <span class="brand">Roie Shalom</span>
         <span class="role">Product Design Lead</span>
         <p class="sidebar-bio">
-          Hello! I'm an experienced and creative designer with an eye for detail and a passion for coherent, innovative digital products.<br>
-          I thrive on learning new things and collaborating to create great work. Connect with me below!
+          Hello! I'm an experienced and creative designer with an eye for detail and a passion for coherent, innovative digital products.
         </p>
         <nav class="social">
-          <a href="https://instagram.com/roieshalom" target="_blank" aria-label="Instagram">
+          <a href="https://www.instagram.com/roie_s/" target="_blank" aria-label="Instagram">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
               <path d="M7 2c-2.76 0-5 2.24-5 5v10c0 2.76 2.24 5 5 5h10c2.76 0 5-2.24 5-5V7c0-2.76-2.24-5-5-5H7zm0 2h10c1.65 0 3 1.35 3 3v10c0 1.65-1.35 3-3 3H7c-1.65 0-3-1.35-3-3V7c0-1.65 1.35-3 3-3zm5 3a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6zm6.3-.5a1 1 0 100 2 1 1 0 000-2z" fill="var(--color-link)"/>
             </svg>
@@ -28,7 +30,7 @@
               <path fill="var(--color-link)" d="M12 2a10 10 0 00-3.16 19.48c.5.09.68-.22.68-.48v-1.68c-2.78.61-3.37-1.34-3.37-1.34-.45-1.15-1.1-1.45-1.1-1.45-.9-.61.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.89 1.52 2.34 1.08 2.91.83.09-.64.36-1.08.65-1.33-2.22-.25-4.56-1.11-4.56-4.95a3.88 3.88 0 011.04-2.7 3.6 3.6 0 01.1-2.66s.84-.26 2.75 1.02a9.5 9.5 0 015 0c1.91-1.28 2.75-1.02 2.75-1.02.19.9.22 2.01.1 2.66a3.88 3.88 0 011.04 2.7c0 3.85-2.34 4.7-4.57 4.95.37.32.7.94.7 1.9v2.8c0 .26.18.57.7.48A10 10 0 0012 2z"/>
             </svg>
           </a>
-          <a href="https://linkedin.com/in/roieshalom" target="_blank" aria-label="LinkedIn">
+          <a href="https://linkedin.com/in/roiesh" target="_blank" aria-label="LinkedIn">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
               <path fill="var(--color-link)" d="M19 3A2 2 0 0121 5v14a2 2 0 01-2 2H5a2 2 0 01-2-2V5a2 2 0 012-2h14zm-8.5 14v-6H8V17h2.5zm-1.25-6.75a1.25 1.25 0 10-.01-2.51A1.25 1.25 0 009.25 10.25zm9.25 6.75v-3.22c0-1.94-1.03-2.83-2.4-2.83-1.11 0-1.61.61-1.89 1.04V11h-2.5V17H14v-3.14c0-.15.01-.3.04-.41.09-.28.3-.59.65-.59.61 0 .85.44.85 1.09V17H18.5z"/>
             </svg>
@@ -43,7 +45,6 @@
           I'm an experienced and creative designer with an eye for details and a desire for clear and coherent design. Fascinated by innovation and technology, I explored various fields. Recently, I've worked as an interface designer and manager with global companies such as HP, Stanley Black & Decker, and SanDisk Corporation.
         </p>
       </section>
-
       <section id="experience" class="section">
         <div class="section-title">Experience</div>
         <ul class="experience-list">
@@ -57,7 +58,6 @@
           </li>
         </ul>
       </section>
-
       <section id="work" class="section">
         <div class="section-title">Selected Work</div>
         <div class="selected-work">
@@ -78,14 +78,12 @@
           </div>
         </div>
       </section>
-
       <section id="testimonials" class="section">
         <div class="section-title">Testimonials</div>
         <div class="testimonial-list">
           <div class="testimonial">“Balances creativity with strategic product thinking—always calm and focused, even on impossible deadlines.” <b>Anna Lee, CTO, AmazingCorp</b></div>
         </div>
       </section>
-
       <section id="contact" class="section">
         <div class="section-title">Contact</div>
         <div class="contact-block">
@@ -94,7 +92,6 @@
           <b>Open to:</b> Remote & onsite opportunities
         </div>
       </section>
-
       <section id="more-about" class="section">
         <div class="section-title">More About Me</div>
         <ul class="personal-list">
@@ -105,5 +102,21 @@
       </section>
     </main>
   </div>
+  <script>
+    const toggleBtn = document.getElementById('theme-toggle');
+    const iconSpan = document.getElementById('theme-toggle-icon');
+
+    if (localStorage.getItem('theme') === 'dark') {
+      document.body.classList.add('dark-mode');
+      iconSpan.textContent = '☀️';
+    }
+
+    toggleBtn.onclick = function() {
+      document.body.classList.toggle('dark-mode');
+      const darkModeOn = document.body.classList.contains('dark-mode');
+      iconSpan.textContent = darkModeOn ? '☀️' : '🌙';
+      localStorage.setItem('theme', darkModeOn ? 'dark' : 'light');
+    };
+  </script>
 </body>
 </html>
