Add Netlify CMS for Experience section

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </ul>
       </section>
       <section id="work" class="section">
-        <div class="section-title">Selected Work</div>
+        <div class="section-title">Projects</div>
         <div class="selected-work">
           <div class="work-item">
             <img class="work-thumb" src="images/placeholder.png" alt="Project thumbnail">
