--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
         <div class="section-title">Projects</div>
         <div class="selected-work">
           <div class="work-item">
-            <img class="work-thumb" src="images/placeholder.png" alt="Project thumbnail">
+            <img class="work-thumb" src="content/images/placeholder.png" alt="Project thumbnail">
             <div class="work-title">Project One</div>
             <a href="#" class="work-link">View Project</a>
           </div>
           <div class="work-item">
-            <img class="work-thumb" src="images/placeholder.png" alt="Project thumbnail">
+            <img class="work-thumb" src="content/images/placeholder.png" alt="Project thumbnail">
             <div class="work-title">Project Two</div>
             <a href="#" class="work-link">View Project</a>
           </div>
           <div class="work-item">
-            <img class="work-thumb" src="images/placeholder.png" alt="Project thumbnail">
+            <img class="work-thumb" src="content/images/placeholder.png" alt="Project thumbnail">
             <div class="work-title">Project Three</div>
             <a href="#" class="work-link">View Project</a>
           </div>
