short bio update

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <span class="brand">Roie Shalom</span>
         <span class="role">Product Design Lead</span>
         <p class="sidebar-bio">
-          Hello! I'm an experienced and creative designer with an eye for detail and a passion for coherent, innovative digital products.
+          Welcome to my personal website! Here you can find my projects, past experience, and some other experiments I'm running.
         </p>
         <nav class="sidebar-nav">
           <a href="#about" class="nav-link active">About</a>
