--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Roie Shalom · Product Design Lead</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="content/images/favicon.ico">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
