fun box minimalizing

--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
             <span id="theme-toggle-text">Change theme 🌙</span>
           </a>
           <div class="fun-links">
-            <a href="#" class="fun-link">Placeholder 1</a>
-            <a href="#" class="fun-link">Placeholder 2</a>
-            <a href="#" class="fun-link">Placeholder 3</a>
+            <a href="#" class="textContent">More coming soon...</a>
           </div>
         </section>
         <div style="margin-bottom: 24px;"></div>
