fun box minimalizing2

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <section class="sidebar-fun" id="desktop-fun">
           <div class="fun-title">Fun</div>
           <a href="#" id="theme-toggle" class="fun-link" aria-label="Change theme" style="margin-top: 8px; margin-bottom:18px;">
-            <span id="theme-toggle-text">Change theme 🌙</span>
+            <span id="theme-toggle-text">🌙 Change theme</span>
           </a>
           <div class="fun-links">
-            <a href="#" class="textContent">More coming soon...</a>
+            <a href="#" class="exp-desc">More coming soon...</a>
           </div>
         </section>
         <div style="margin-bottom: 24px;"></div>
