--- a/index.html
+++ b/index.html
@@ -32,14 +32,12 @@
         </nav>
         <div style="margin-top:42px;"></div>
         <section class="sidebar-fun" id="desktop-fun">
-          <div class="fun-title">Fun</div>
+          <div class="fun-title">Fun things</div>
           <a href="#" id="theme-toggle" class="fun-link" aria-label="Change theme" style="margin-top: 8px; margin-bottom:18px;">
-            <span id="theme-toggle-text">Change theme 🌙</span>
+            <span id="theme-toggle-text">🌙 Change theme</span>
           </a>
           <div class="fun-links">
-            <a href="#" class="fun-link">Placeholder 1</a>
-            <a href="#" class="fun-link">Placeholder 2</a>
-            <a href="#" class="fun-link">Placeholder 3</a>
+            <a href="#" class="exp-desc">More coming soon...</a>
           </div>
         </section>
         <div style="margin-bottom: 24px;"></div>
