fun link underlined2

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a href="#" id="theme-toggle" class="fun-link" aria-label="Change theme" style="margin-top: 8px; margin-bottom:18px;">
             <span id="theme-toggle-text">🌙 Change theme</span>
           </a>
-          <div class="fun-links">
+          <div class="textContent">
             <a href="#" class="exp-desc">More coming soon...</a>
           </div>
         </section>
