span for fun link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <span id="theme-toggle-text">🌙 Change theme</span>
           </a>
           <div class="textContent">
-            <a href="#" class="exp-desc">More coming soon...</a>
+            <span class="exp-desc">More coming soon...</span>
           </div>
         </section>
         <div style="margin-bottom: 24px;"></div>
